--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "next build",
+        "build": "next build && next export",
         "start": "next start",
         "lint": "next lint",
-        "export": "next export"
+        "export": "next export",
+        "export-docs": "rm -rf docs/* && cp -r out/* docs/"
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.1",
